--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.repository == 'home-assistant/stun' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.7
@@ -20,19 +21,17 @@ jobs:
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3.3.0
+        if: ${{ github.event_name == 'release' }}
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract release version
-        run: |
-          echo "RELEASE_VERSION=$(echo $GITHUB_REF | cut -d / -f 3)" >> $GITHUB_ENV
-
       - name: Build and push
         uses: docker/build-push-action@v6.7.0
+        if: ${{ github.event_name == 'release' }}
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ env.RELEASE_VERSION }}
+          tags: ghcr.io/${{ github.repository }}:${{ github.event.release.tag_name }}
